fix card spacing

--- a/src/features/displayCard/layoutStyles/carousel/styles/_carousel.scss
+++ b/src/features/displayCard/layoutStyles/carousel/styles/_carousel.scss
@@ -322,6 +322,7 @@ body {
           // }
           h4 {
             font-size: 25px;
+            margin-top: 29px;
             margin-bottom: 0;
             &.sub {
               margin-top: 0;
